--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
 <script src="Scripts/keys.js"></script>
 <script src="Scripts/constants.js"></script>
 <script src="Scripts/main.js"></script>
+<script src="Scripts/soundmanager2.js"></script>
+<audio></audio>
 </body>
 </html>
